get courses get trainer profile show most wanted courses in home show profile in home

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -203,5 +203,9 @@
   "hoursNumber": "عدد ساعات الكورس",
   "finishedHour": "الساعات المنجزه",
   "remainsHours": "الساعات المتبقيه",
-  "numberOfAbsenece": "عدد مرات الغياب"
+  "numberOfAbsenece": "عدد مرات الغياب",
+  "pricePerHour" :"ريال سعودى/الساعه",
+   "myFiles" :"ملفاتي",
+    "cv" :"السيره الذاتيه",
+    "certificate" :"شهادة"
 }
