--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -207,5 +207,53 @@
   "pricePerHour" :"ريال سعودى/الساعه",
    "myFiles" :"ملفاتي",
     "cv" :"السيره الذاتيه",
-    "certificate" :"شهادة"
+    "certificate" :"شهادة",
+    "addCourse" : "أضافة كورس",
+    "courseArabicName" : "اسم الكورس باللغه العربيه",
+    "courseEnglishName" : "اسم الكورس باللغه الانجليزيه",
+    "uploadCourseImage" : "ارفق صوره تعبيريه عن الكورس",
+    "courseFee" : "سعر الكورس",
+    "discountPercentage" : "نسبه الخصم",
+    "courseHours" : "عدد الساعات",
+    "courseArabicDescription" : "تفاصيل الكورس باللغه العربيه",
+    "courseEnglishDescription" : "تفاصيل الكورس باللغه الانجليزيه",
+    "add" : "اضافه",
+    "courseAddedSuccessfully" : "تمت اضافة الكورس بنجاح",
+    "goToMyCourses" : "الذهاب الي كورساتي",
+    "doYouWantToChatWithYourTrainees" : "تبي تواصل معا متدربك؟",
+    "messages" : "الرسائل",
+    "enterTextHere" : "اكتب رسالتك هنا",
+    "remainingTime" : "المده المتبقيه:",
+    "active" : "فعاله",
+    "notActive" : "غير فعاله",
+    "mostWantedCourses" : "الكورسات الأكثر طلبا",
+    "viewAll" : "اظهار الكل",
+    "noCoursesYet" : "لا يوجد كورسات",
+    "newTrainees" : "المتدربين الجدد",
+    "noTraineesYet" : "لا يوجد متدربين",
+    "currentSubscription" : "الباقه الحاليه",
+    "inProgress" : "قيد الأنتظار",
+    "active" : "فعاله",
+    "finished" : "منتهيه",
+    "Subscribers" : "المشتركين:",
+    "maximumSubscribers:" : "الحد الأقصي للمشتركين:",
+    "trainees" : "المتدريبين",
+    "accepted" : "الموافق عليها",
+    "rejected" : "الملغاه",
+    "detectYourLocation" : "حدد موقعك علي الخريطه",
+    "pickLocation" : "حدد موقعك",
+    "currentLocation" : "موقعك الحالي",
+    "startTraining" : "ابدا التمرين",
+    "enterNewData" : "ادخل قيم جديده",
+    "traineeIn" : "متدرب في",
+    "cm" : "سم",
+    "kg" : "كيلو جرام",
+    "totalTrainingCourseHours" : "عدد ساعات الكورس الكليه",
+    "hour" : "ساعه",
+    "once" : "مره",
+    "weight" : "الوزن",
+    "fatPercentage" : "نسبة الدهون",
+    "completedHours" : "الساعات المنجزة",
+    "absenceCount" : "عدد مرات الغياب"
+
 }
