--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -259,6 +259,7 @@
     "subscriptions" : "باقات الاشتراك",
     "everyYear" : "كل سنة",
     "subscribe" : "اشتراك",
-    "noNotificationsYet" : "لا يوجد اشعارات"
+    "noNotificationsYet" : "لا يوجد اشعارات",
+    "dishsMostOrder" : "الاطباق الاكثر طلبا"
 
 }
